--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <header class="header">
     <div class="header__container container">
         <a class="header__logo">
-            <img src="img/graduation-cap--v1.png" >
+            <img src="img/Logo_fondoceleste.svg" >
             <span>GoCareer</span>
         </a>
         <nav class="header__navbar">
