--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </a>
         <nav class="header__navbar">
             <a class="active" href="#hero">Inicio</a>
-            <a href="#app">App</a>
+            <a href="#app">Features</a>
             <a href="#contact">Contacto</a>
         </nav>
     </div>
@@ -35,10 +35,6 @@
                     universitaria. Creemos que proveyéndoles una opción
                     simple  para saberlo, lograremos reducir este número.
                 </p>
-                <div class="hero__downloads">
-                    <img src="img/astore.png" alt="ios">
-                    <img src="img/gplay.png" alt="google play">
-                </div>
             </div>
             <div class="hero__img">
                 <img class="inicio__image" src="img/contact.png">
@@ -47,6 +43,7 @@
     </section>
 
     <section class="app" id="app">
+        <h1 class="title">Features of the App</h1>
         <div class="app__container container">
             <div class="card">
                 <div class="card__img">
@@ -79,6 +76,26 @@
                     <p>Podrás encontrar artículos e información de profesionales que ejerzan
                         la carrera que sea adecuada para ti. Tendrás datos de primera mano
                         e incluso pueden resolver tus dudas mediante las publicaciones.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="testi" id="testimonials">
+        <div class="container">
+            <h1 class="title">User Testimonials</h1>
+            <div class="testi-content">
+                <div class="card">
+                    <p class="comment">"¡Mi experiencia en GoCareer fue increíble! Lorem ipsum dolor sit amet Aspernatur atque fugit mollitia neque numquam pariatur."</p>
+                    <p class="user">- Juan Pérez</p>
+                </div>
+                <div class="card">
+                    <p class="comment">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur atque fugit mollitia neque numquam pariatur."</p>
+                    <p class="user">- María González</p>
+                </div>
+                <div class="card">
+                    <p class="comment">"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur atque fugit mollitia neque numquam pariatur."</p>
+                    <p class="user">- Alejandro Gustavo</p>
                 </div>
             </div>
         </div>
