feat: updated language

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <header class="header">
     <div class="header__container container">
         <a class="header__logo">
-            <img src="img/Logo_fondoceleste.svg" >
+            <img src="img/graduation-cap--v1.png" >
             <span>GoCareer</span>
         </a>
         <nav class="header__navbar">
@@ -29,16 +29,15 @@
     <section class="hero" id="hero">
         <div class="hero__container container">
             <div class="hero__content">
-                <h1>Estas listo para </br><span>tu futuro?</span></h1>
-                <p> Actualmente existe una gran cantidad de jóvenes
-                    que ignoran lo importante que es escoger una carrera</br>
-                    universitaria. Creemos que proveyéndoles una opción
-                    simple  para saberlo, lograremos reducir este número.
+                <h1>Are you ready for</br><span>Your future?</span></h1>
+                <p> Currently there are a large number of young people
+                    who ignore how important it is to choose a career</br>
+                    university. We believe that by providing them with an option
+                    simple to know, we will be able to reduce this number.
                 </p>
-                <div class="hero__downloads">
-                    <img src="img/astore.png" alt="ios">
-                    <img src="img/gplay.png" alt="google play">
-                </div>
+                <button class="hero__btn">
+                    <a href="https://gocareer.netlify.app/">Get Started</a>
+                </button>
             </div>
             <div class="hero__img">
                 <img class="inicio__image" src="img/contact.png">
@@ -53,18 +52,18 @@
                     <img src="img/test.png" alt="test">
                 </div>
                 <div class="card__text">
-                    <h1>Prueba nuestro test de habilidades</h1>
-                    <p>Disponemos de  un test para conocer las preferencias y habilidades
-                        blandas de nuestros usuarios. De esta forma ofrecemos un servicio
-                        enfocado en cada tipo de usuario.</p>
+                    <h1>Try our skills test</h1>
+                    <p>We have a test to find out preferences and abilities
+                        soft of our users. In this way we offer a service
+                        focused on each type of user.</p>
                 </div>
             </div>
             <div class="card">
                 <div class="card__text">
-                    <h1>Chatea con profesionales</h1>
-                    <p>Tenemos a disposición un grupo de psicólogos especializados en el tema
-                        de orientación vocacional. Donde podrás obtener un servicio personalizado
-                        y una reunion virtual para  mejores resultados</p>
+                    <h1>Chat with professionals</h1>
+                    <p>We have at our disposal a group of psychologists specialized in the subject.
+                        vocational guidance. Where you can get personalized service
+                        and a virtual meeting for better results</p>
                 </div>
                 <div class="card__img">
                     <img src="img/chats.png" alt="chats">
@@ -75,10 +74,10 @@
                     <img src="img/article.png" alt="article">
                 </div>
                 <div class="card__text">
-                    <h1>Únete a nuestra comunidad de estudiantes</h1>
-                    <p>Podrás encontrar artículos e información de profesionales que ejerzan
-                        la carrera que sea adecuada para ti. Tendrás datos de primera mano
-                        e incluso pueden resolver tus dudas mediante las publicaciones.</p>
+                    <h1>Join our community of students</h1>
+                    <p>You can find articles and information from professionals who practice
+                        the career that is right for you. You will have first-hand data
+                        and they can even answer your questions through publications.</p>
                 </div>
             </div>
         </div>
@@ -90,15 +89,15 @@
                 <img src="img/duda.png" alt="contact">
             </div>
             <div class="contact__content">
-                <h1>PONTE EN CONTACTO CON NOSOTROS</h1>
-                <p>Rellena los siguientes campos y te responderemos lo más pronto posible</p>
+                <h1>GET IN CONTACT WITH US</h1>
+                <p>Fill out the following fields and we will respond to you as soon as possible</p>
                 <form action="contact">
                     <input type="text" placeholder="Nombre">
                     <input type="text" placeholder="Correo">
                     <input type="text" placeholder="Asunto">
                     <textarea placeholder="Mensaje"></textarea>
                 </form>
-                <button>ENVIAR</button>
+                <button>SEND</button>
             </div>
         </div>
     </section>
@@ -120,7 +119,7 @@
             <i class="fa-brands fa-linkedin"></i>
         </a>
     </div>
-    <p class="footer__copy">© 2023 GoCareer. Todos los derechos reservados.</p>
+    <p class="footer__copy">© 2023 GoCareer. All rights reserved.</p>
 </footer>
 
 <!-- Icons FontAwesome-->
